--- a/assets/02-css/04-cssAdvanced/05-css_grid_part1.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part1.html
@@ -55,7 +55,7 @@
 			<li><code class="t_blue weight-700 bg_none">grid area</code> : 다수의 <code>grid cell</code>로 이루어진 영역을 뜻합니다. <code>grid area</code>는 항상 사각형의 모양을 가져야합니다. (ㄴ자, ㄱ자 형태 불가능)</li>
 		</ol>
 		<figure class="img_figure mt_m">
-			<figcaption class="mt_0 t_blue weight-600">[display: grid]</figcaption>
+			<figcaption class="mt_0 weight-600"><code class="bg_none t_blue">[ display: grid ]</code></figcaption>
 			<img src="/ukncs/images/css/grid/uxkm_grid.svg" alt="display: grid" class="mt_m"><br>
 			<!--<img src="/ukncs/images/css/grid-concepts.svg" alt="display: grid" class="mt_m max-w650">-->
 		</figure>
@@ -107,7 +107,7 @@
 			</ol>
 
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0 t _black weight-600">[grid vs flex]</figcaption>
+				<figcaption class="mt_0 weight-600"><code class="bg_none t_444">[ grid vs flex ]</code></figcaption>
 				<!--<img src="/ukncs/images/css/grid_vs_flex.png" alt="grid vs flex" class="mt_m max-w700"><br>-->
 				<!--<img src="/ukncs/images/css/grid/grid_vs_flex2.jpg" alt="grid vs flex" class="mt_m"><br>-->
 				<img src="/ukncs/images/css/grid/uxkm_grid_vs_flex.svg" alt="grid vs flex" class="mt_m">
@@ -139,7 +139,7 @@
 				그리드 컨테이너 요소이며, 자식요소를 그리드 아이템으로 설정합니다.
 			</p>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0 t_black weight-600">[grid]</figcaption>
+				<figcaption class="mt_0 weight-600"><code class="bg_none t_444">[ grid ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_grid-terms.svg" alt="grid" class="mt_m">
 			</figure>
 		</article>
@@ -152,7 +152,7 @@
 				즉, 그리드의 행/열을 그리는 선을 말하며, 각 선은 라인 넘버를 갖습니다. 그리드 아이템을 배치하는 기준으로 사용됩니다.
 			</p>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0 t_black weight-600">[line]</figcaption>
+				<figcaption class="mt_0 weight-600"><code class="bg_none t_444">[ line ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_line-terms.svg" alt="line" class="mt_m">
 				<!--<img src="/ukncs/images/css/img_grid_line.png" alt="line" class="mt_m max-w750">-->
 			</figure>
@@ -166,7 +166,7 @@
 				즉, 그리드 트랙은 그리드 라인 사이의 행 또는 열 공간을 말합니다.
 			</p>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0 t_black weight-600">[track]</figcaption>
+				<figcaption class="mt_0 weight-600"><code class="bg_none t_444">[ track ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_track-terms.svg" alt="track" class="mt_m">
 				<!--<img src="/ukncs/images/css/img_grid_track.png" alt="track" class="mt_m max-w750">-->
 			</figure>
@@ -180,7 +180,7 @@
 				즉, 그리드 셀은 4개의 그리드 라인이 묶여 그려지는 가장 작은 단위(유닛) 입니다.
 			</p>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0 t_black weight-600">[cell]</figcaption>
+				<figcaption class="mt_0 weight-600"><code class="bg_none t_444">[ cell ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_cell-terms.svg" alt="cell" class="mt_m">
 				<!--<img src="/ukncs/images/css/img_grid_cell.png" alt="cell" class="mt_m max-w400">-->
 			</figure>
@@ -194,7 +194,7 @@
 				즉, 그리드 에어리어는 그리드 유닛이 묶인 영역으로 고유한 식별자를 가지며, 식별자를 통해 요소를 배치할 수 있습니다.
 			</p>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0 t_black weight-600">[area]</figcaption>
+				<figcaption class="mt_0 weight-600"><code class="bg_none t_444">[ area ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_area-terms.svg" alt="cell" class="mt_m">
 				<!--<img src="/ukncs/images/css/img_grid_area.png" alt="cell" class="mt_m max-w400">-->
 			</figure>
@@ -208,7 +208,7 @@
 				<code>gap</code>(row, column 동시 선언), <code>row-gap</code>, <code>column-gap</code> 속성으로 제어합니다.
 			</p>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0 t_black weight-600">[gutters]</figcaption>
+				<figcaption class="mt_0 weight-600"><code class="bg_none t_444">[ gutters ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_gutters-terms.svg" alt="gutters" class="mt_m">
 			</figure>
 		</article>
@@ -290,7 +290,7 @@
 			</section>
 
 			<figure class="img_figure mt_ml">
-				<figcaption class="mt_0">[repeat function]</figcaption>
+				<figcaption class="mt_0"><code class="bg_none t_444">[ repeat function ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_repeat-function.svg" alt="repeat function" class="mt_m">
 			</figure>
 		</article>
@@ -336,7 +336,7 @@
 			</section>
 
 			<figure class="img_figure mt_ml">
-				<figcaption class="mt_0">[minmax function]</figcaption>
+				<figcaption class="mt_0"><code class="bg_none t_444">[ minmax function ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_minmax-function.svg" alt="minmax function" class="mt_m">
 			</figure>
 		</article>
@@ -384,7 +384,7 @@
 			</section>
 
 			<figure class="img_figure mt_ml">
-				<figcaption class="mt_0 sound_only">[grid-template-columns: fit-content(300px) fit-content(300px) 1fr;]</figcaption>
+				<figcaption class="mt_0 sound_only"><code class="bg_none t_444">[ grid-template-columns: fit-content(300px) fit-content(300px) 1fr; ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_fit-content-function.svg" alt="grid-template-columns: fit-content(300px) fit-content(300px) 1fr;">
 			</figure>
 		</article>
@@ -420,7 +420,7 @@
 				</div>
 			</section>
 			<figure class="img_figure mt_ml">
-				<figcaption class="mt_0">[ <b>fr</b>(fractional unit) 사용 예시 ]</figcaption>
+				<figcaption class="mt_0">[ <code class="bg_none t_444">fr(fractional unit)</code> 사용 예시 ]</figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_fr-units.svg" alt="fr(fractional unit) 사용 예시" class="mt_m">
 			</figure>
 		</article>
@@ -450,7 +450,7 @@
 				</div>
 			</section>
 			<figure class="img_figure mt_ml">
-				<figcaption class="mt_0">[한글을 사용하는 경우 word-break: keep-all;를 설정]</figcaption>
+				<figcaption class="mt_0">[한글을 사용하는 경우 <code class="bg_none t_444">word-break: keep-all;</code>를 설정]</figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_min-content.svg" alt="한글을 사용하는 경우 word-break: keep-all;를 설정" class="mt_m">
 			</figure>
 		</article>
@@ -483,7 +483,7 @@
 				</div>
 			</section>
 			<figure class="img_figure mt_ml">
-				<figcaption class="mt_0">[min-content / max-content]</figcaption>
+				<figcaption class="mt_0"><code class="bg_none t_444">[ min-content / max-content ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_minmax-content.svg" alt="min-content / max-content" class="mt_m">
 			</figure>
 		</article>
@@ -499,7 +499,7 @@
 				<code>auto-fill</code>과 <code>auto-fit</code>은 간단한 차이점을 제외하면 동일하게 동작합니다.
 			</p>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0">[auto-fill과 auto-fit]</figcaption>
+				<figcaption class="mt_0"><code class="bg_none t_444">[ auto-fill & auto-fit ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_auto-fill-fit.svg" alt="auto-fill과 auto-fit" class="mt_m">
 			</figure>
 			<section class="indent mt_m">
@@ -528,7 +528,7 @@
 					</ul>
 				</div>
 				<figure class="img_figure mt_ml">
-					<figcaption class="mt_0">[auto-fill 유/무의 차이]</figcaption>
+					<figcaption class="mt_0">[<code class="bg_none t_444">auto-fill</code> 유/무의 차이]</figcaption>
 					<img src="/ukncs/images/css/grid/uxkm_grid_auto-fill_vs_x.svg" alt="auto-fill 유/무의 차이" class="mt_m">
 				</figure>
 			</section>
@@ -570,7 +570,7 @@
 				</div>
 			</section>
 			<figure class="img_figure mt_ml">
-				<figcaption class="mt_0">[auto-fill과 auto-fit 비교]</figcaption>
+				<figcaption class="mt_0"><code class="bg_none t_444">[ auto-fill vs auto-fit ]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_auto-fill-vs-fill.svg" alt="auto-fill과 auto-fit 비교" class="mt_m">
 			</figure>
 		</article>
