--- a/assets/02-css/04-cssAdvanced/05-css_grid_part3.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part3.html
@@ -721,7 +721,7 @@
 				</section>
 				<figure class="img_figure mt_ms">
 					<figcaption class="mt_0">[위 예제의 결과물]</figcaption>
-					<img src="/ukncs/images/css/grid/uxkm_grid-auto-flow_ex.svg" alt="위 예제의 결과물">
+					<img src="/ukncs/images/css/grid/uxkm_grid-auto-flow_ex.svg" alt="위 예제의 결과물" class="mt_m">
 				</figure>
 			</section>
 
@@ -1024,7 +1024,7 @@
 				<div class="line_code_box line_code_number mt_ms">
 					<ul>
 						<li>.container {</li>
-						<li class="indent">align-content : start | center | end | stretch | space-around | space-between | space-evenly;</li>
+						<li class="indent">align-content : start | center | end | stretch | space-between | space-around | space-evenly;</li>
 						<li>}</li>
 					</ul>
 				</div>
@@ -1036,8 +1036,8 @@
 							: 그리드 컨테이너 영역의 시작점(위쪽)에 아이템 트랙을 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-content: start;]</figcaption>
-							<img src="/ukncs/images/css/gird-align-content-start.svg" alt="align-content: start" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-content: <i class="t_blue">start</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-content-start.svg" alt="align-content: start" class="mt_s">
 						</figure>
 					</li>
 
@@ -1048,8 +1048,8 @@
 							: 그리드 컨테이너 영역의 중앙에 아이템 트랙을 정렬(수직 가운데 정렬)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-content: center;]</figcaption>
-							<img src="/ukncs/images/css/gird-align-content-center.svg" alt="align-content: center" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-content: <i class="t_blue">center</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-content-center.svg" alt="align-content: center" class="mt_s">
 						</figure>
 					</li>
 
@@ -1060,8 +1060,8 @@
 							: 그리드 컨테이너 영역의 끝점(아래쪽)에 아이템 트랙을 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-content: end;]</figcaption>
-							<img src="/ukncs/images/css/gird-align-content-end.svg" alt="align-content: end" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-content: <i class="t_blue">end</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-content-end.svg" alt="align-content: end" class="mt_s">
 						</figure>
 					</li>
 
@@ -1072,20 +1072,8 @@
 							: 그리드 컨테이너 영역을 아이템 트랙 크기를 조정하여 채움(열 축을 채우기 위해 그리드 콘텐츠를 늘림)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-content: stretch;]</figcaption>
-							<img src="/ukncs/images/css/gird-align-content-stretch.svg" alt="align-content: stretch" class="mt_s max-w400">
-						</figure>
-					</li>
-
-					<!-- space-around -->
-					<li class="mt_m">
-						<p>
-							<code class="weight-500 t_blue bg_noone">space-around</code>
-							: 그리드 컨테이너의 남은 영역을 아이템 트랙(열)이 좌/우 공간으로 나눔(양 가장자리 공간은 아이템 그룹 사이 간격의 1/2)(각 행 위아래에 여백을 고르게 정렬)
-						</p>
-						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-content: space-around;]</figcaption>
-							<img src="/ukncs/images/css/gird-align-content-space-around.svg" alt="align-content: space-around" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-content: <i class="t_blue">stretch</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-content-stretch.svg" alt="align-content: stretch" class="mt_s">
 						</figure>
 					</li>
 
@@ -1096,8 +1084,20 @@
 							: 그리드 컨테이너 영역의 양 가장자리 공백 없이, 아이템 트랙(열) 사이 공간을 나눔(첫 행은 시작점에, 끝 행은 끝점에 정렬되고 나머지 여백으로 고르게 정렬)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-content: space-between;]</figcaption>
-							<img src="/ukncs/images/css/gird-align-content-space-between.svg" alt="align-content: space-between" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-content: <i class="t_blue">space-between</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-content-space-between.svg" alt="align-content: space-between" class="mt_s">
+						</figure>
+					</li>
+
+					<!-- space-around -->
+					<li class="mt_m">
+						<p>
+							<code class="weight-500 t_blue bg_noone">space-around</code>
+							: 그리드 컨테이너의 남은 영역을 아이템 트랙(열)이 좌/우 공간으로 나눔(양 가장자리 공간은 아이템 그룹 사이 간격의 1/2)(각 행 위아래에 여백을 고르게 정렬)
+						</p>
+						<figure class="img_figure mt_s">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-content: <i class="t_blue">space-around</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-content-space-around.svg" alt="align-content: space-around" class="mt_s">
 						</figure>
 					</li>
 
@@ -1108,8 +1108,8 @@
 							: <code>space-around</code>와 비슷해보이지만, 공간을 모두 동일하게 나누는 점이 다름(모든 여백을 고르게 정렬)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-content: space-evenly;]</figcaption>
-							<img src="/ukncs/images/css/gird-align-content-space-evenly.svg" alt="align-content: space-evenly" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-content: <i class="t_blue">space-evenly</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-content-space-evenly.svg" alt="align-content: space-evenly" class="mt_s">
 						</figure>
 					</li>
 				</ol>
@@ -1136,7 +1136,7 @@
 				<div class="line_code_box line_code_number mt_ms">
 					<ul>
 						<li>.container {</li>
-						<li class="indent">justify-content: start | end | center | stretch | space-around | space-between | space-evenly;</li>
+						<li class="indent">justify-content: start | end | center | stretch | space-between | space-around | space-evenly;</li>
 						<li>}</li>
 					</ul>
 				</div>
@@ -1149,8 +1149,8 @@
 							: 그리드 컨테이너 영역의 시작점(왼쪽)에 아이템 트랙을 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-content: start;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-content-start.svg" alt="justify-content: start" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-content: <i class="t_blue">start</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-content-start.svg" alt="justify-content: start" class="mt_s">
 						</figure>
 					</li>
 
@@ -1161,8 +1161,8 @@
 							: 그리드 컨테이너 영역의 중앙에 아이템 트랙을 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-content: center;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-content-center.svg" alt="justify-content: center" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-content: <i class="t_blue">center</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-content-center.svg" alt="justify-content: center" class="mt_s">
 						</figure>
 					</li>
 
@@ -1173,8 +1173,8 @@
 							: 그리드 컨테이너 영역의 끝점(오른쪽)에 아이템 트랙을 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-content: end;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-content-end.svg" alt="justify-content: end" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-content: <i class="t_blue">end</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-content-end.svg" alt="justify-content: end" class="mt_s">
 						</figure>
 					</li>
 
@@ -1185,20 +1185,8 @@
 							: 그리드 컨테이너 영역을 아이템 트랙 크기를 조정하여 채움(행 축을 채우기 위해 그리드 콘텐츠를 늘림)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-content: stretch;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-content-stretch.svg" alt="justify-content: stretch" class="mt_s max-w400">
-						</figure>
-					</li>
-
-					<!-- space-around -->
-					<li class="mt_m">
-						<p>
-							<code class="weight-500 t_blue bg_noone">space-around</code>
-							: 그리드 컨테이너의 남은 영역을 아이템 트랙(열)이 좌/우 공간으로 나눔(양 가장자리 공간은 아이템 그룹 사이 간격의 1/2)(각 열 좌우에 여백을 고르게 정렬)
-						</p>
-						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-content: space-around;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-content-space-around.svg" alt="justify-content: space-around" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-content: <i class="t_blue">stretch</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-content-stretch.svg" alt="justify-content: stretch" class="mt_s">
 						</figure>
 					</li>
 
@@ -1209,8 +1197,20 @@
 							: 그리드 컨테이너 영역의 양 가장자리 공백 없이, 아이템 트랙(열) 사이 공간을 나눔(첫 열은 시작점에, 끝 열은 끝점에 정렬되고 나머지 여백으로 고르게 정렬)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-content: space-between ;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-content-space-between.svg" alt="justify-content: space-between" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-content: <i class="t_blue">space-between</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-content-space-between.svg" alt="justify-content: space-between" class="mt_s">
+						</figure>
+					</li>
+
+					<!-- space-around -->
+					<li class="mt_m">
+						<p>
+							<code class="weight-500 t_blue bg_noone">space-around</code>
+							: 그리드 컨테이너의 남은 영역을 아이템 트랙(열)이 좌/우 공간으로 나눔(양 가장자리 공간은 아이템 그룹 사이 간격의 1/2)(각 열 좌우에 여백을 고르게 정렬)
+						</p>
+						<figure class="img_figure mt_s">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-content: <i class="t_blue">space-around</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-content-space-around.svg" alt="justify-content: space-around" class="mt_s">
 						</figure>
 					</li>
 
@@ -1221,8 +1221,8 @@
 							: <code>space-around</code>와 비슷해보이지만, 공간을 모두 동일하게 나누는 점이 다름(모든 여백을 고르게 정렬)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-content: space-evenly ;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-content-space-evenly.svg" alt="justify-content: space-evenly" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-content: <i class="t_blue">space-evenly</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-content-space-evenly.svg" alt="justify-content: space-evenly" class="mt_s">
 						</figure>
 					</li>
 				</ol>
@@ -1326,8 +1326,8 @@
 							: 그리드 영역의 시작점(위쪽)에 콘텐츠 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-items: start;]</figcaption>
-							<img src="/ukncs/images/css/grid-align-items-start.svg" alt="align-items: start" class="mt_s max-w500">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-items: <i class="t_blue">start</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-items-start.svg" alt="align-items: start" class="mt_s">
 						</figure>
 					</li>
 
@@ -1338,8 +1338,8 @@
 							: 그리드 영역의 중앙에 콘텐츠 정렬(수직 가운데 정렬)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-items: center;]</figcaption>
-							<img src="/ukncs/images/css/grid-align-items-center.svg" alt="align-items: center" class="mt_s max-w500">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-items: <i class="t_blue">center</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-items-center.svg" alt="align-items: center" class="mt_s">
 						</figure>
 					</li>
 
@@ -1350,8 +1350,8 @@
 							: 그리드 영역의 끝점(아래쪽)에 콘텐츠 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-items: end;]</figcaption>
-							<img src="/ukncs/images/css/grid-align-items-end.svg" alt="align-items: end" class="mt_s max-w500">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-items: <i class="t_blue">end</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-items-end.svg" alt="align-items: end" class="mt_s">
 						</figure>
 					</li>
 
@@ -1362,8 +1362,8 @@
 							: 기본값으로 그리드 영역 전체 너비를 채움(열 축을 채우기 위해 그리드 아이템을 늘림)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[align-items: stretch;]</figcaption>
-							<img src="/ukncs/images/css/grid-align-items-stretch.svg" alt="align-items: stretch" class="mt_s max-w500">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ align-items: <i class="t_blue">stretch</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-items-stretch.svg" alt="align-items: stretch" class="mt_s">
 						</figure>
 					</li>
 				</ol>
@@ -1401,8 +1401,8 @@
 							: 그리드 아이템 영역 행 축 시작점(왼쪽)에 콘텐츠를 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-items: start;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-items-start.svg" alt="justify-items: start" class="mt_s max-w500">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-items: <i class="t_blue">start</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-items-start.svg" alt="justify-items: start" class="mt_s">
 						</figure>
 					</li>
 
@@ -1413,8 +1413,8 @@
 							: 그리드 아이템 영역 행 축 중앙에 콘텐츠를 정렬(수평 가운데 정렬)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-items: center;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-items-center.svg" alt="justify-items: center" class="mt_s max-w500">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-items: <i class="t_blue">center</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-items-center.svg" alt="justify-items: center" class="mt_s">
 						</figure>
 					</li>
 
@@ -1425,8 +1425,8 @@
 							: 그리드 아이템 영역 행 축 끝점(오른쪽)에 콘텐츠를 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-items: end;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-items-end.svg" alt="justify-items: end" class="mt_s max-w500">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-items: <i class="t_blue">end</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-items-end.svg" alt="justify-items: end" class="mt_s">
 						</figure>
 					</li>
 
@@ -1437,8 +1437,8 @@
 							: 그리드 아이템 영역을 행 축에 가득 채움(행 축을 채우기 위해 그리드 아이템을 늘림)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[justify-items: stretch;]</figcaption>
-							<img src="/ukncs/images/css/grid-justify-items-stretch.svg" alt="justify-items: stretch" class="mt_s max-w500">
+							<figcaption class="mt_0"><code class="bg_none t_444">[ justify-items: <i class="t_blue">stretch</i>; ]</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-items-stretch.svg" alt="justify-items: stretch" class="mt_s">
 						</figure>
 					</li>
 				</ol>
