--- a/assets/02-css/04-cssAdvanced/05-css_grid_part4.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part4.html
@@ -58,7 +58,7 @@
 				그리드 라인을 기반으로 하여 아이템을 배치(레이아웃) 할 수 있습니다.
 			</p>
 			<figure class="img_figure mt_m">
-				<img src="/ukncs/images/css/grid-line-rowcolumn.png" alt="그리드 라인을 기반으로 하여 아이템을 배치" class="max-w700">
+				<img src="/ukncs/images/css/grid/uxkm_grid-line-rowcolumn.svg" alt="그리드 라인을 기반으로 하여 아이템을 배치">
 				<figcaption class="sound_only">[그리드 라인을 기반으로 하여 아이템을 배치]</figcaption>
 			</figure>
 			<ol class="ol_lst mt_ms indent">
@@ -92,37 +92,37 @@
 				</p>
 				<figure class="img_figure mt_ms">
 					<figcaption class="mt_0">[span을 사용해 상대적으로 영역을 설정]</figcaption>
-					<img src="/ukncs/images/css/grid-line-span.png" alt="span을 사용해 상대적으로 영역을 설정" class="mt_m max-w700">
+					<img src="/ukncs/images/css/grid/uxkm_grid-line-span.svg" alt="span을 사용해 상대적으로 영역을 설정" class="mt_m">
 				</figure>
 
 				<h5 class="mt_ml">아이템 요소의 배치를 그리드 라인 번호 또는 참조 이름을 사용하여 설정</h5>
 				<div class="line_code_box line_code_number indent mt_ms">
 					<ul>
-						<li><i class="t_darkOrange">.item-a</i> {</li>
-						<li class="indent">grid-column-start: 2; <i class="t_999">// line2와 동일</i></li>
-						<li class="indent">grid-column-end: five;</li>
-						<li class="indent">grid-row-start: row1-start;</li>
-						<li class="indent">grid-row-end: 3; <i class="t_999">// third-line과 동일</i></li>
+						<li><i class="t_green">.item-a</i> {</li>
+						<li class="indent">grid-column-start: <i class="t_green">2</i>; <i class="t_999">// line2와 동일</i></li>
+						<li class="indent">grid-column-end: <i class="t_green">five</i>;</li>
+						<li class="indent">grid-row-start: <i class="t_green">row1-start</i>;</li>
+						<li class="indent">grid-row-end: <i class="t_green">3</i>; <i class="t_999">// third-line과 동일</i></li>
 						<li>}</li>
 					</ul>
 				</div>
 				<figure class="img_figure indent mt_m">
-					<img src="/ukncs/images/css/grid-column-row-start-end-01.svg" alt="아이템 요소의 배치를 그리드 라인 번호 또는 참조 이름을 사용하여 설정" class="max-w550">
+					<img src="/ukncs/images/css/grid/uxkm_grid-column-row-start-end-01.svg" alt="아이템 요소의 배치를 그리드 라인 번호 또는 참조 이름을 사용하여 설정">
 				</figure>
 
 				<h5 class="mt_ml">아이템 요소에 span 설정(상대적 범위 추가)을 사용한 레이아웃</h5>
 				<div class="line_code_box line_code_number indent mt_ms">
 					<ul>
-						<li><i class="t_skyblue">.item-b</i> {</li>
-						<li class="indent">grid-column-start: 1;</li>
-						<li class="indent">grid-column-end: span col4-start;</li>
-						<li class="indent">grid-row-start: 2;</li>
-						<li class="indent">grid-row-end: span 2;</li>
+						<li><i class="t_blue">.item-b</i> {</li>
+						<li class="indent">grid-column-start: <i class="t_blue">1</i>; <i class="t_999">// first와 동일</i></li>
+						<li class="indent">grid-column-end: <i class="t_blue">span col4-start</i>;</li>
+						<li class="indent">grid-row-start: <i class="t_blue">2</i>; <i class="t_999">// row1-end와 동일</i></li>
+						<li class="indent">grid-row-end: <i class="t_blue">span 2</i>;</li>
 						<li>}</li>
 					</ul>
 				</div>
 				<figure class="img_figure indent mt_m">
-					<img src="/ukncs/images/css/grid-column-row-start-end-02.svg" alt="아이템 요소에 span 설정(상대적 범위 추가)을 사용한 레이아웃" class="max-w550">
+					<img src="/ukncs/images/css/grid/uxkm_grid-column-row-start-end-02.svg" alt="아이템 요소에 span 설정(상대적 범위 추가)을 사용한 레이아웃">
 				</figure>
 
 				<aside class="browser_support mt_l" data-tit="grid-[column/row]-[start/end]">
@@ -162,14 +162,14 @@
 				<h5 class="mt_ml">아이템 요소 배치에 속기형 속성을 사용</h5>
 				<div class="line_code_box line_code_number indent mt_ms">
 					<ul>
-						<li><i class="t_red">.item-c</i> {</li>
-						<li class="indent">grid-column: 3 / span 2;</li>
-						<li class="indent">grid-row: third-line / 4; <i class="t_999">// third-line 값과 동일하게 처리됩니다.</i></li>
+						<li><i class="t_purple">.item-c</i> {</li>
+						<li class="indent">grid-column: <i class="t_purple">3 / span 2</i> <i class="t_999">// line2 / five와 동일</i>;</li>
+						<li class="indent">grid-row: <i class="t_purple">third-line / 4</i>; <i class="t_999">// third-line / last-line과 동일</i></li>
 						<li>}</li>
 					</ul>
 				</div>
 				<figure class="img_figure indent mt_m">
-					<img src="/ukncs/images/css/grid-column-row.svg" alt="아이템 요소 배치에 속기형 속성을 사용" class="max-w550">
+					<img src="/ukncs/images/css/grid/uxkm_grid-column-row-start-end-03.svg" alt="아이템 요소 배치에 속기형 속성을 사용">
 				</figure>
 
 				<aside class="browser_support mt_l" data-tit="grid-column/row">
@@ -261,17 +261,18 @@
 				<h5 class="mt_ml">grid-area 속성 값으로 grid-template-areas에 사용된 참조 이름을 사용</h5>
 				<div class="line_code_box line_code_number indent mt_ms">
 					<ul>
-						<li><i class="t_green">.item-d</i> {</li>
+						<li><i class="t_blue">.item-d</i> {</li>
 						<li class="indent">grid-area: header;</li>
 						<li>}</li>
 						<li>/* grid-row-start / grid-column-start / grid-row-end / grid-column-end 순으로 속성 값을 설정 */</li>
-						<li><i class="t_green">.item-d</i> {</li>
-						<li class="indent">grid-area: 1 / col4-start / last-line / 6;</li>
+						<li><i class="t_blue">.item-d</i> {</li>
+						<li class="indent">grid-area: <i class="t_purple">1</i> / <i class="t_green">col4-start</i> / <i class="t_purple">last-line</i> / <i class="t_green">6</i>;</li>
 						<li>}</li>
+						<li>/* row1-start / col4-start / last-line / end 와 동일 */</li>
 					</ul>
 				</div>
 				<figure class="img_figure indent mt_m">
-					<img src="/ukncs/images/css/grid-area.svg" alt="grid-area 속성 값으로 grid-template-areas에 사용된 참조 이름을 사용" class="max-w550">
+					<img src="/ukncs/images/css/grid/uxkm_grid-area.svg" alt="grid-area 속성 값으로 grid-template-areas에 사용된 참조 이름을 사용">
 				</figure>
 
 				<aside class="browser_support mt_l" data-tit="grid-area">
@@ -318,20 +319,20 @@
 						<li class="indent">grid-template-rows: repeat(2, minmax(50px, auto));</li>
 						<li>}</li>
 						<li></li>
-						<li>.item:nth-child(1) {</li>
-						<li class="indent">/* 그리드 아이템 순서 설정 (자동 배치 내) */</li>
-						<li class="indent">order: 2;</li>
+						<li>/* 그리드 아이템 순서 설정 (자동 배치 내) */</li>
+						<li><i class="t_green">.item1</i> {</li>
+						<li class="indent">order: <i class="t_green">2</i>;</li>
 						<li>}</li>
-						<li>.item:nth-child(2) {</li>
-						<li class="indent">order: 3;</li>
+						<li><i class="t_blue">.item2</i> {</li>
+						<li class="indent">order: <i class="t_blue">3</i>;</li>
 						<li>}</li>
-						<li>.item:nth-child(3) {</li>
-						<li class="indent">order: 1;</li>
+						<li><i class="t_purple">.item3</i> {</li>
+						<li class="indent">order: <i class="t_purple">1</i>;</li>
 						<li>}</li>
 					</ul>
 				</div>
 				<figure class="img_figure indent mt_m">
-					<img src="/ukncs/images/css/grid-order.png" alt="order 속성을 사용하여 배치 순서를 지정" class="max-w350">
+					<img src="/ukncs/images/css/grid/uxkm_grid-order.svg" alt="order 속성을 사용하여 배치 순서를 지정">
 				</figure>
 
 				<div class="view_editor edit_code mt_ml" data-target="css/step03/4.5.grid/4.5.6.4.grid-order.html">
@@ -361,20 +362,20 @@
 				</p>
 				<div class="line_code_box line_code_number indent mt_ms">
 					<ul>
-						<li><i class="t_red">.item:nth-child(1)</i> {</li>
+						<li><i class="t_green">.item1</i> {</li>
 						<li class="indent">grid-area: 1 / 1 / 2 / 3;</li>
 						<li>}</li>
-						<li><i class="t_darkOrange">.item:nth-child(2)</i> {</li>
+						<li><i class="t_blue">.item2</i> {</li>
 						<li class="indent">grid-area: 1 / 2 / 3 / 3;</li>
 						<li class="indent">z-index: 1;</li>
 						<li>}</li>
-						<li><i class="t_green">.item:nth-child(3)</i> {</li>
+						<li><i class="t_purple">.item3</i> {</li>
 						<li class="indent">grid-area: 2 / 2 / 3 / 4;</li>
 						<li>}</li>
 					</ul>
 				</div>
 				<figure class="img_figure indent mt_m">
-					<img src="/ukncs/images/css/grid-z-index.png" alt="그리드 아이템의 쌓이는 순서를 지정" class="max-w350">
+					<img src="/ukncs/images/css/grid/uxkm_grid-z-index.svg" alt="그리드 아이템의 쌓이는 순서를 지정">
 				</figure>
 
 				<div class="view_editor edit_code mt_ml" data-target="css/step03/4.5.grid/4.5.6.4.grid-z-index.html">
@@ -400,10 +401,14 @@
 				<div class="line_code_box line_code_number mt_ms">
 					<ul>
 						<li>.item {</li>
-						<li class="indent">align-self: start | end | center | stretch;</li>
+						<li class="indent">align-self: start | center | end | stretch;</li>
 						<li>}</li>
 					</ul>
 				</div>
+				<figure class="img_figure mt_s">
+					<figcaption class="mt_0"><code class="bg_none t_444">.item { align-self: <i class="t_blue">start</i> | <i class="t_blue">center</i> | <i class="t_blue">end</i> | <i class="t_blue">stretch</i>; }</code></figcaption>
+					<img src="/ukncs/images/css/grid/uxkm_grid-align-self-all.svg" alt="item-a {align-self: start | center | end | stretch;}" class="mt_s">
+				</figure>
 				<ol class="ol_lst mt_ml indent">
 					<!-- start -->
 					<li>
@@ -412,8 +417,8 @@
 							: 그리드 아이템 영역 열 축 시작점(위쪽)에 콘텐츠를 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">.item-a { align-self: start; }</figcaption>
-							<img src="/ukncs/images/css/grid-align-self-start.svg" alt="item-a {align-self: start;}" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">.item-a { align-self: <i class="t_blue">start</i>; }</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-self-start.svg" alt="item-a {align-self: start;}" class="mt_s">
 						</figure>
 					</li>
 
@@ -424,8 +429,8 @@
 							: 그리드 아이템 영역 열 축 중앙에 콘텐츠를 정렬(수직 가운데 정렬)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">.item-a { align-self: center; }</figcaption>
-							<img src="/ukncs/images/css/grid-align-self-center.svg" alt="item-a {align-self: center;}" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">.item-a { align-self: <i class="t_blue">center</i>; }</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-self-center.svg" alt="item-a {align-self: center;}" class="mt_s">
 						</figure>
 					</li>
 
@@ -436,8 +441,8 @@
 							: 그리드 아이템 영역 행 축 끝점(아래쪽)에 콘텐츠를 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">.item-a { align-self: end; }</figcaption>
-							<img src="/ukncs/images/css/grid-align-self-end.svg" alt="item-a {align-self: end;}" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">.item-a { align-self: <i class="t_blue">end</i>; }</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-self-end.svg" alt="item-a {align-self: end;}" class="mt_s">
 						</figure>
 					</li>
 
@@ -448,8 +453,8 @@
 							: 그리드 아이템 영역을 열 축에 가득 채움(열 축을 채우기 위해 그리드 아이템을 늘림)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">.item-a { align-self: stretch; }</figcaption>
-							<img src="/ukncs/images/css/grid-align-self-stretch.svg" alt="item-a {align-self: stretch;}" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">.item-a { align-self: <i class="t_blue">stretch</i>; }</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-align-self-stretch.svg" alt="item-a {align-self: stretch;}" class="mt_s">
 						</figure>
 					</li>
 				</ol>
@@ -476,10 +481,14 @@
 				<div class="line_code_box line_code_number mt_ms">
 					<ul>
 						<li>.item {</li>
-						<li class="indent">justify-self: start | end | center | stretch;</li>
+						<li class="indent">justify-self: start | center | end | stretch;</li>
 						<li>}</li>
 					</ul>
 				</div>
+				<figure class="img_figure mt_s">
+					<figcaption class="mt_0"><code class="bg_none t_444">.item { justify-self: <i class="t_blue">start</i> | <i class="t_blue">center</i> | <i class="t_blue">end</i> | <i class="t_blue">stretch</i>; }</code></figcaption>
+					<img src="/ukncs/images/css/grid/uxkm_grid-justify-self-all.svg" alt="item-a {justify-self: start | center | end | stretch;}" class="mt_s">
+				</figure>
 				<ol class="ol_lst mt_ml indent">
 					<!-- start -->
 					<li>
@@ -488,8 +497,8 @@
 							: 그리드 아이템 영역 행 축 시작점시작점(왼쪽)에 콘텐츠를 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">.item-a { justify-self: start; }</figcaption>
-							<img src="/ukncs/images/css/grid-justify-self-start.svg" alt="item-a {justify-self: start;}" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">.item-a { justify-self: <i class="t_blue">start</i>; }</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-self-start.svg" alt="item-a {justify-self: start;}" class="mt_s">
 						</figure>
 					</li>
 
@@ -500,8 +509,8 @@
 							: 그리드 아이템 영역 행 축 중앙에 콘텐츠를 정렬(수평 가운데 정렬)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">.item-a { justify-self: center; }</figcaption>
-							<img src="/ukncs/images/css/grid-justify-self-center.svg" alt="item-a {justify-self: center;}" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">.item-a { justify-self: <i class="t_blue">center</i>; }</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-self-center.svg" alt="item-a {justify-self: center;}" class="mt_s">
 						</figure>
 					</li>
 
@@ -512,8 +521,8 @@
 							: 그리드 아이템 영역 행 축 끝점(오른쪽)에 콘텐츠를 정렬
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">.item-a { justify-self: end; }</figcaption>
-							<img src="/ukncs/images/css/grid-justify-self-end.svg" alt="item-a {justify-self: end;}" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">.item-a { justify-self: <i class="t_blue">end</i>; }</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-self-end.svg" alt="item-a {justify-self: end;}" class="mt_s">
 						</figure>
 					</li>
 
@@ -524,8 +533,8 @@
 							: 그리드 아이템 영역을 행 축에 가득 채움(행 축을 채우기 위해 그리드 아이템을 늘림)
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">.item-a { justify-self: stretch; }</figcaption>
-							<img src="/ukncs/images/css/grid-justify-self-stretch.svg" alt="item-a {justify-self: stretch;}" class="mt_s max-w400">
+							<figcaption class="mt_0"><code class="bg_none t_444">.item-a { justify-self: <i class="t_blue">stretch</i>; }</code></figcaption>
+							<img src="/ukncs/images/css/grid/uxkm_grid-justify-self-stretch.svg" alt="item-a {justify-self: stretch;}" class="mt_s">
 						</figure>
 					</li>
 				</ol>
@@ -592,13 +601,13 @@
 				</div>
 
 				<figure class="img_figure mt_ml">
-					<figcaption class="mt_0">.item-a { place-self: center; }</figcaption>
-					<img src="/ukncs/images/css/grid-place-self-center.svg" alt="item-a {place-self: center;}" class="mt_s max-w400">
+					<figcaption class="mt_0"><code class="bg_none t_444">.item-a { place-self: <i class="t_blue">center</i>; }</code></figcaption>
+					<img src="/ukncs/images/css/grid/uxkm_grid-place-self-center.svg" alt="item-a {place-self: center;}" class="mt_s">
 				</figure>
 
 				<figure class="img_figure mt_m">
-					<figcaption class="mt_0">.item-a { place-self: center stretch; }</figcaption>
-					<img src="/ukncs/images/css/grid-place-self-center-stretch.svg" alt="item-a {place-self: center;}" class="mt_s max-w400">
+					<figcaption class="mt_0"><code class="bg_none t_444">.item-a { place-self: <i class="t_blue">center stretch</i>; }</code></figcaption>
+					<img src="/ukncs/images/css/grid/uxkm_grid-place-self-center-stretch.svg" alt="item-a {place-self: center;}" class="mt_s">
 				</figure>
 
 				<aside class="browser_support mt_ml" data-tit="place-self">
